--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div id="root"><!--react-ssr-outlet--></div>
-    <script crossorigin="anonymous" src="https://cdn.bootcss.com/react/16.8.0-alpha.1/umd/react.development.js"></script>
-    <script crossorigin="anonymous" src="https://cdn.bootcss.com/react-dom/16.8.0-alpha.1/umd/react-dom.development.js"></script>
+    <script crossorigin="anonymous" src="https://cdn.bootcss.com/react/16.8.1/umd/react.production.min.js"></script>
+    <script crossorigin="anonymous" src="https://cdn.bootcss.com/react-dom/16.8.1/umd/react-dom.production.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.bootcss.com/redux/4.0.1/redux.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.bootcss.com/react-router-dom/4.3.1/react-router-dom.min.js"></script>
     <!-- injectScript -->
