--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="root"><!--react-ssr-outlet--></div>
+    <script crossorigin="anonymous" src="https://cdn.bootcss.com/babel-polyfill/7.2.5/polyfill.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.bootcss.com/react/16.8.1/umd/react.production.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.bootcss.com/react-dom/16.8.1/umd/react-dom.production.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.bootcss.com/redux/4.0.1/redux.min.js"></script>
