--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- injectHelmet -->
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta charset="UTF-8">
 	<link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
-	<title>N.MKV</title>
 </head>
 <body>
     <div id="root"><!--react-ssr-outlet--></div>
