support dynamic import

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
     <!-- injectHelmet -->
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta charset="UTF-8">
-	<link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
+    <!-- injectLinks -->
 </head>
 <body>
     <div id="root"><!--react-ssr-outlet--></div>
@@ -13,6 +14,7 @@
     <script crossorigin="anonymous" src="https://cdn.bootcss.com/react-dom/16.8.1/umd/react-dom.production.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.bootcss.com/redux/4.0.1/redux.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.bootcss.com/react-router-dom/4.3.1/react-router-dom.min.js"></script>
-    <!-- injectScript -->
+    <!-- injectInitialState -->
+    <!-- injectScripts -->
 </body>
 </html>
